# proyectterremotos

./: .gitignore  CMakeLists.txt  CMakeLists_test.txt  Config.h  GUIA_FUNCIONAMIENTO.md  INTEGRATION_GUIDE.md  README_PICO.md  main.cpp  setup.sh  test_uart.cpp  web_page.hpp
earthquake-dashboard/: package-lock.json  package.json
earthquake-dashboard/src/app/: layout.tsx  page.tsx
lib/: Esp8266HttpServer.cpp  Esp8266HttpServer.h  MPU6050.cpp  MPU6050.h  SeismicMonitor.cpp  SeismicMonitor.h
servidor_express/: .env  README.md  SYSTEM_STATUS.md  monitor_system.sh  package-lock.json  package.json  server.js
servidor_express/.github/: copilot-instructions.md
servidor_express/database/: earthquakes.db  init.js
servidor_express/routes/: analysis.js  earthquakes.js  notifications.js  pico.js
servidor_express/services/: analysis.js  notifications.js
servidor_express/tests/: nextjs_integration_example.md  pico_complete_code.md  pico_integration_example.md  test_api.sh  test_pico_integration.sh
